[project]
name = "llm-sandbox"
version = "0.1.0"
description = "Provider-agnostic code-execution sandbox sidecar (gVisor / ...) exposing one HTTP interface to store files and run shell, Python and JavaScript."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
